--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -47,3 +47,9 @@ body{
     transform-origin: center left;
     transform: scaleX(1);
 }
+
+@media (max-width: 768px) {
+    .siderbar{
+        display: none;
+    }
+}
